added limitation to card model
